Minor chages to fix windows FF alignment issues in checkbox box

--- a/css/main.css
+++ b/css/main.css
@@ -474,7 +474,7 @@ Quote form
     border: 1px solid #d0cb92;
     background-color: #feffe6;
     margin: 0 0 20px;
-    height : 140px;
+    height : 150px;
     font-weight: bold;
     padding : 10px;
 }
@@ -482,7 +482,7 @@ Quote form
 .quote_checkbox img {
 	float : left;
 	padding-right : 10px;
-	margin-bottom: 80px;
+	margin-bottom: 100px;
 }
 
 .quote_dealer div {
